// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResultContainer card to table transition 1`] = `
<div
  className="search-result-container"
>
  <React.Fragment>
    <PrintAccessibilityModal
      StatusMessage=""
      areSelectedItemsHaveMath={false}
      onChangeModelState={[Function]}
      onSubmitPrint={[Function]}
      showModal={false}
    />
    <ErrorMessageModal
      StatusMessage=""
      onChangeErrorModelState={[Function]}
      showModal={false}
    />
  </React.Fragment>
  <div
    className="row search-result-header-row"
  >
    <div
      className="col-sm-4 header-grid-div header-print-button-groups"
    >
      <React.Fragment />
    </div>
    <div
      className="col-sm-3 header-grid-div  "
    >
      <button
        aria-label="table view toggle"
        className="btn btn-gray"
        onClick={[Function]}
        value={0}
      >
        <i
          aria-hidden="true"
          className="fa fa-table"
        />
      </button>
      <button
        aria-label="item card view toggle"
        className="btn btn-white"
        onClick={[Function]}
        value={1}
      >
        <i
          aria-hidden="true"
          className="glyphicon glyphicon-th-large glyphicon-pad"
        />
      </button>
    </div>
    <div
      className="col-sm-5 header-grid-div header-print-button-groups"
    >
      <button
        aria-label="Clear Selection"
        className="btn btn-default search-result-container-header-button disabled"
        onClick={[Function]}
        title="Clear Selection"
      >
        <i
          aria-hidden="true"
          className="fa fa-eraser"
        />
         Clear
      </button>
      <button
        aria-label="Print Item"
        className="btn btn-default search-result-container-header-button"
        onClick={[Function]}
        title="Print Items"
      >
        <i
          aria-hidden="true"
          className="glyphicon glyphicon-th-large glyphicon-print"
        />
         
        Print
      </button>
    </div>
  </div>
  <div
    className="search-result-body"
  >
    <ItemTableContainer
      getSelectedItemCount={[Function]}
      isLinkTable={false}
      item={
        Object {
          "kind": "none",
        }
      }
      itemCards={
        Array [
          Object {
            "bankKey": 187,
            "brailleOnlyItem": false,
            "calculator": true,
            "claimCode": "MATH1",
            "claimLabel": "Concepts and Procedures",
            "grade": 8,
            "gradeLabel": "Grade 6",
            "interactionTypeCode": "EQ",
            "interactionTypeLabel": "Equation",
            "isPerformanceItem": true,
            "itemKey": 3206,
            "subjectCode": "MATH",
            "subjectLabel": "Math",
            "targetDescription": "Target A description with extra text for testing fewoiauighruiaebiurbbvnianiuergruia",
            "targetHash": 100,
            "targetId": "A",
            "targetShortName": "",
            "title": "Math Grade 6 Claim 1",
          },
          Object {
            "bankKey": 187,
            "brailleOnlyItem": false,
            "calculator": false,
            "claimCode": "ELA1",
            "claimLabel": "Reading",
            "grade": 1,
            "gradeLabel": "Grade 3",
            "interactionTypeCode": "MC",
            "interactionTypeLabel": "Multiple Choice",
            "isPerformanceItem": true,
            "itemKey": 3163,
            "subjectCode": "ELA",
            "subjectLabel": "ELA/literacy",
            "targetDescription": "Target B description",
            "targetHash": 1039,
            "targetId": "B",
            "targetShortName": "Key Details",
            "title": "ELA/ literacy Grade 3 Claim 1",
          },
          Object {
            "bankKey": 187,
            "brailleOnlyItem": false,
            "claimCode": "MATH4",
            "claimLabel": "Modeling/Data Analysis",
            "grade": 8,
            "gradeLabel": "Grade 6",
            "interactionTypeCode": "MS",
            "interactionTypeLabel": "Multi Select",
            "isPerformanceItem": false,
            "itemKey": 3615,
            "subjectCode": "MATH",
            "subjectLabel": "Math",
            "targetDescription": "target C description",
            "targetHash": 0,
            "targetId": "C",
            "targetShortName": "",
            "title": "Math Grade 6 Claim 4",
          },
          Object {
            "bankKey": 187,
            "brailleOnlyItem": false,
            "claimCode": "ELA4",
            "claimLabel": "Research/Inquiry",
            "grade": 2,
            "gradeLabel": "Grade 4",
            "interactionTypeCode": "MS",
            "interactionTypeLabel": "Multi Select",
            "isPerformanceItem": false,
            "itemKey": 2928,
            "subjectCode": "ELA",
            "subjectLabel": "ELA/literacy",
            "targetDescription": "target D description",
            "targetHash": 2832,
            "targetId": "D",
            "targetShortName": "Evaluate Information/ sources",
            "title": "ELA/ literacy Grade 4 Claim 4",
          },
        ]
      }
      numberOfSelectedItem={0}
      onCountNumberOfItemSelection={[Function]}
      onItemSelection={[Function]}
      onRowSelection={[Function]}
      showErrorModalOnPrintItemsCountExceeded={[Function]}
    />
  </div>
</div>
`;

exports[`SearchResultContainer empty itemCards 1`] = `
<div
  className="search-result-container"
>
  <React.Fragment>
    <PrintAccessibilityModal
      StatusMessage=""
      areSelectedItemsHaveMath={false}
      onChangeModelState={[Function]}
      onSubmitPrint={[Function]}
      showModal={false}
    />
    <ErrorMessageModal
      StatusMessage=""
      onChangeErrorModelState={[Function]}
      showModal={false}
    />
  </React.Fragment>
  <div
    className="row search-result-header-row"
  >
    <div
      className="col-sm-4 header-grid-div header-print-button-groups"
    >
      <React.Fragment />
    </div>
    <div
      className="col-sm-3 header-grid-div  "
    >
      <button
        aria-label="table view toggle"
        className="btn btn-white"
        onClick={[Function]}
        value={0}
      >
        <i
          aria-hidden="true"
          className="fa fa-table"
        />
      </button>
      <button
        aria-label="item card view toggle"
        className="btn btn-gray"
        onClick={[Function]}
        value={1}
      >
        <i
          aria-hidden="true"
          className="glyphicon glyphicon-th-large glyphicon-pad"
        />
      </button>
    </div>
    <div
      className="col-sm-5 header-grid-div header-print-button-groups"
    >
      <button
        aria-label="Clear Selection"
        className="btn btn-default search-result-container-header-button disabled"
        onClick={[Function]}
        title="Clear Selection"
      >
        <i
          aria-hidden="true"
          className="fa fa-eraser"
        />
         Clear
      </button>
      <button
        aria-label="Print Item"
        className="btn btn-default search-result-container-header-button"
        onClick={[Function]}
        title="Print Items"
      >
        <i
          aria-hidden="true"
          className="glyphicon glyphicon-th-large glyphicon-print"
        />
         
        Print
      </button>
    </div>
  </div>
  <div
    className="search-result-body"
  >
    <div
      className="loader"
    />
  </div>
</div>
`;

exports[`SearchResultContainer onload matches snapshot ItemCards 1`] = `
<div
  className="search-result-container"
>
  <React.Fragment>
    <PrintAccessibilityModal
      StatusMessage=""
      areSelectedItemsHaveMath={false}
      onChangeModelState={[Function]}
      onSubmitPrint={[Function]}
      showModal={false}
    />
    <ErrorMessageModal
      StatusMessage=""
      onChangeErrorModelState={[Function]}
      showModal={false}
    />
  </React.Fragment>
  <div
    className="row search-result-header-row"
  >
    <div
      className="col-sm-4 header-grid-div header-print-button-groups"
    >
      <React.Fragment />
    </div>
    <div
      className="col-sm-3 header-grid-div  "
    >
      <button
        aria-label="table view toggle"
        className="btn btn-white"
        onClick={[Function]}
        value={0}
      >
        <i
          aria-hidden="true"
          className="fa fa-table"
        />
      </button>
      <button
        aria-label="item card view toggle"
        className="btn btn-gray"
        onClick={[Function]}
        value={1}
      >
        <i
          aria-hidden="true"
          className="glyphicon glyphicon-th-large glyphicon-pad"
        />
      </button>
    </div>
    <div
      className="col-sm-5 header-grid-div header-print-button-groups"
    >
      <button
        aria-label="Clear Selection"
        className="btn btn-default search-result-container-header-button disabled"
        onClick={[Function]}
        title="Clear Selection"
      >
        <i
          aria-hidden="true"
          className="fa fa-eraser"
        />
         Clear
      </button>
      <button
        aria-label="Print Item"
        className="btn btn-default search-result-container-header-button"
        onClick={[Function]}
        title="Print Items"
      >
        <i
          aria-hidden="true"
          className="glyphicon glyphicon-th-large glyphicon-print"
        />
         
        Print
      </button>
    </div>
  </div>
  <div
    className="search-result-body"
  >
    <ItemCard
      getSelectedItemCount={[Function]}
      isPrintLimitEnabled={true}
      key="187 - 3206"
      onRowSelect={[Function]}
      rowData={
        Object {
          "bankKey": 187,
          "brailleOnlyItem": false,
          "calculator": true,
          "claimCode": "MATH1",
          "claimLabel": "Concepts and Procedures",
          "grade": 8,
          "gradeLabel": "Grade 6",
          "interactionTypeCode": "EQ",
          "interactionTypeLabel": "Equation",
          "isPerformanceItem": true,
          "itemKey": 3206,
          "subjectCode": "MATH",
          "subjectLabel": "Math",
          "targetDescription": "Target A description with extra text for testing fewoiauighruiaebiurbbvnianiuergruia",
          "targetHash": 100,
          "targetId": "A",
          "targetShortName": "",
          "title": "Math Grade 6 Claim 1",
        }
      }
      showErrorModalOnPrintItemsCountExceeded={[Function]}
    />
    <ItemCard
      getSelectedItemCount={[Function]}
      isPrintLimitEnabled={true}
      key="187 - 3163"
      onRowSelect={[Function]}
      rowData={
        Object {
          "bankKey": 187,
          "brailleOnlyItem": false,
          "calculator": false,
          "claimCode": "ELA1",
          "claimLabel": "Reading",
          "grade": 1,
          "gradeLabel": "Grade 3",
          "interactionTypeCode": "MC",
          "interactionTypeLabel": "Multiple Choice",
          "isPerformanceItem": true,
          "itemKey": 3163,
          "subjectCode": "ELA",
          "subjectLabel": "ELA/literacy",
          "targetDescription": "Target B description",
          "targetHash": 1039,
          "targetId": "B",
          "targetShortName": "Key Details",
          "title": "ELA/ literacy Grade 3 Claim 1",
        }
      }
      showErrorModalOnPrintItemsCountExceeded={[Function]}
    />
    <ItemCard
      getSelectedItemCount={[Function]}
      isPrintLimitEnabled={true}
      key="187 - 3615"
      onRowSelect={[Function]}
      rowData={
        Object {
          "bankKey": 187,
          "brailleOnlyItem": false,
          "claimCode": "MATH4",
          "claimLabel": "Modeling/Data Analysis",
          "grade": 8,
          "gradeLabel": "Grade 6",
          "interactionTypeCode": "MS",
          "interactionTypeLabel": "Multi Select",
          "isPerformanceItem": false,
          "itemKey": 3615,
          "subjectCode": "MATH",
          "subjectLabel": "Math",
          "targetDescription": "target C description",
          "targetHash": 0,
          "targetId": "C",
          "targetShortName": "",
          "title": "Math Grade 6 Claim 4",
        }
      }
      showErrorModalOnPrintItemsCountExceeded={[Function]}
    />
    <ItemCard
      getSelectedItemCount={[Function]}
      isPrintLimitEnabled={true}
      key="187 - 2928"
      onRowSelect={[Function]}
      rowData={
        Object {
          "bankKey": 187,
          "brailleOnlyItem": false,
          "claimCode": "ELA4",
          "claimLabel": "Research/Inquiry",
          "grade": 2,
          "gradeLabel": "Grade 4",
          "interactionTypeCode": "MS",
          "interactionTypeLabel": "Multi Select",
          "isPerformanceItem": false,
          "itemKey": 2928,
          "subjectCode": "ELA",
          "subjectLabel": "ELA/literacy",
          "targetDescription": "target D description",
          "targetHash": 2832,
          "targetId": "D",
          "targetShortName": "Evaluate Information/ sources",
          "title": "ELA/ literacy Grade 4 Claim 4",
        }
      }
      showErrorModalOnPrintItemsCountExceeded={[Function]}
    />
  </div>
</div>
`;

exports[`SearchResultContainer onload matches snapshot table 1`] = `
<div
  className="search-result-container"
>
  <React.Fragment>
    <PrintAccessibilityModal
      StatusMessage=""
      areSelectedItemsHaveMath={false}
      onChangeModelState={[Function]}
      onSubmitPrint={[Function]}
      showModal={false}
    />
    <ErrorMessageModal
      StatusMessage=""
      onChangeErrorModelState={[Function]}
      showModal={false}
    />
  </React.Fragment>
  <div
    className="row search-result-header-row"
  >
    <div
      className="col-sm-4 header-grid-div header-print-button-groups"
    >
      <React.Fragment />
    </div>
    <div
      className="col-sm-3 header-grid-div  "
    >
      <button
        aria-label="table view toggle"
        className="btn btn-gray"
        onClick={[Function]}
        value={0}
      >
        <i
          aria-hidden="true"
          className="fa fa-table"
        />
      </button>
      <button
        aria-label="item card view toggle"
        className="btn btn-white"
        onClick={[Function]}
        value={1}
      >
        <i
          aria-hidden="true"
          className="glyphicon glyphicon-th-large glyphicon-pad"
        />
      </button>
    </div>
    <div
      className="col-sm-5 header-grid-div header-print-button-groups"
    >
      <button
        aria-label="Clear Selection"
        className="btn btn-default search-result-container-header-button disabled"
        onClick={[Function]}
        title="Clear Selection"
      >
        <i
          aria-hidden="true"
          className="fa fa-eraser"
        />
         Clear
      </button>
      <button
        aria-label="Print Item"
        className="btn btn-default search-result-container-header-button"
        onClick={[Function]}
        title="Print Items"
      >
        <i
          aria-hidden="true"
          className="glyphicon glyphicon-th-large glyphicon-print"
        />
         
        Print
      </button>
    </div>
  </div>
  <div
    className="search-result-body"
  >
    <ItemTableContainer
      getSelectedItemCount={[Function]}
      isLinkTable={false}
      item={
        Object {
          "kind": "none",
        }
      }
      itemCards={
        Array [
          Object {
            "bankKey": 187,
            "brailleOnlyItem": false,
            "calculator": true,
            "claimCode": "MATH1",
            "claimLabel": "Concepts and Procedures",
            "grade": 8,
            "gradeLabel": "Grade 6",
            "interactionTypeCode": "EQ",
            "interactionTypeLabel": "Equation",
            "isPerformanceItem": true,
            "itemKey": 3206,
            "subjectCode": "MATH",
            "subjectLabel": "Math",
            "targetDescription": "Target A description with extra text for testing fewoiauighruiaebiurbbvnianiuergruia",
            "targetHash": 100,
            "targetId": "A",
            "targetShortName": "",
            "title": "Math Grade 6 Claim 1",
          },
          Object {
            "bankKey": 187,
            "brailleOnlyItem": false,
            "calculator": false,
            "claimCode": "ELA1",
            "claimLabel": "Reading",
            "grade": 1,
            "gradeLabel": "Grade 3",
            "interactionTypeCode": "MC",
            "interactionTypeLabel": "Multiple Choice",
            "isPerformanceItem": true,
            "itemKey": 3163,
            "subjectCode": "ELA",
            "subjectLabel": "ELA/literacy",
            "targetDescription": "Target B description",
            "targetHash": 1039,
            "targetId": "B",
            "targetShortName": "Key Details",
            "title": "ELA/ literacy Grade 3 Claim 1",
          },
          Object {
            "bankKey": 187,
            "brailleOnlyItem": false,
            "claimCode": "MATH4",
            "claimLabel": "Modeling/Data Analysis",
            "grade": 8,
            "gradeLabel": "Grade 6",
            "interactionTypeCode": "MS",
            "interactionTypeLabel": "Multi Select",
            "isPerformanceItem": false,
            "itemKey": 3615,
            "subjectCode": "MATH",
            "subjectLabel": "Math",
            "targetDescription": "target C description",
            "targetHash": 0,
            "targetId": "C",
            "targetShortName": "",
            "title": "Math Grade 6 Claim 4",
          },
          Object {
            "bankKey": 187,
            "brailleOnlyItem": false,
            "claimCode": "ELA4",
            "claimLabel": "Research/Inquiry",
            "grade": 2,
            "gradeLabel": "Grade 4",
            "interactionTypeCode": "MS",
            "interactionTypeLabel": "Multi Select",
            "isPerformanceItem": false,
            "itemKey": 2928,
            "subjectCode": "ELA",
            "subjectLabel": "ELA/literacy",
            "targetDescription": "target D description",
            "targetHash": 2832,
            "targetId": "D",
            "targetShortName": "Evaluate Information/ sources",
            "title": "ELA/ literacy Grade 4 Claim 4",
          },
        ]
      }
      numberOfSelectedItem={0}
      onCountNumberOfItemSelection={[Function]}
      onItemSelection={[Function]}
      onRowSelection={[Function]}
      showErrorModalOnPrintItemsCountExceeded={[Function]}
    />
  </div>
</div>
`;

exports[`SearchResultContainer table to card transition 1`] = `
<div
  className="search-result-container"
>
  <React.Fragment>
    <PrintAccessibilityModal
      StatusMessage=""
      areSelectedItemsHaveMath={false}
      onChangeModelState={[Function]}
      onSubmitPrint={[Function]}
      showModal={false}
    />
    <ErrorMessageModal
      StatusMessage=""
      onChangeErrorModelState={[Function]}
      showModal={false}
    />
  </React.Fragment>
  <div
    className="row search-result-header-row"
  >
    <div
      className="col-sm-4 header-grid-div header-print-button-groups"
    >
      <React.Fragment />
    </div>
    <div
      className="col-sm-3 header-grid-div  "
    >
      <button
        aria-label="table view toggle"
        className="btn btn-white"
        onClick={[Function]}
        value={0}
      >
        <i
          aria-hidden="true"
          className="fa fa-table"
        />
      </button>
      <button
        aria-label="item card view toggle"
        className="btn btn-gray"
        onClick={[Function]}
        value={1}
      >
        <i
          aria-hidden="true"
          className="glyphicon glyphicon-th-large glyphicon-pad"
        />
      </button>
    </div>
    <div
      className="col-sm-5 header-grid-div header-print-button-groups"
    >
      <button
        aria-label="Clear Selection"
        className="btn btn-default search-result-container-header-button disabled"
        onClick={[Function]}
        title="Clear Selection"
      >
        <i
          aria-hidden="true"
          className="fa fa-eraser"
        />
         Clear
      </button>
      <button
        aria-label="Print Item"
        className="btn btn-default search-result-container-header-button"
        onClick={[Function]}
        title="Print Items"
      >
        <i
          aria-hidden="true"
          className="glyphicon glyphicon-th-large glyphicon-print"
        />
         
        Print
      </button>
    </div>
  </div>
  <div
    className="search-result-body"
  >
    <ItemCard
      getSelectedItemCount={[Function]}
      isPrintLimitEnabled={true}
      key="187 - 3206"
      onRowSelect={[Function]}
      rowData={
        Object {
          "bankKey": 187,
          "brailleOnlyItem": false,
          "calculator": true,
          "claimCode": "MATH1",
          "claimLabel": "Concepts and Procedures",
          "grade": 8,
          "gradeLabel": "Grade 6",
          "interactionTypeCode": "EQ",
          "interactionTypeLabel": "Equation",
          "isPerformanceItem": true,
          "itemKey": 3206,
          "subjectCode": "MATH",
          "subjectLabel": "Math",
          "targetDescription": "Target A description with extra text for testing fewoiauighruiaebiurbbvnianiuergruia",
          "targetHash": 100,
          "targetId": "A",
          "targetShortName": "",
          "title": "Math Grade 6 Claim 1",
        }
      }
      showErrorModalOnPrintItemsCountExceeded={[Function]}
    />
    <ItemCard
      getSelectedItemCount={[Function]}
      isPrintLimitEnabled={true}
      key="187 - 3163"
      onRowSelect={[Function]}
      rowData={
        Object {
          "bankKey": 187,
          "brailleOnlyItem": false,
          "calculator": false,
          "claimCode": "ELA1",
          "claimLabel": "Reading",
          "grade": 1,
          "gradeLabel": "Grade 3",
          "interactionTypeCode": "MC",
          "interactionTypeLabel": "Multiple Choice",
          "isPerformanceItem": true,
          "itemKey": 3163,
          "subjectCode": "ELA",
          "subjectLabel": "ELA/literacy",
          "targetDescription": "Target B description",
          "targetHash": 1039,
          "targetId": "B",
          "targetShortName": "Key Details",
          "title": "ELA/ literacy Grade 3 Claim 1",
        }
      }
      showErrorModalOnPrintItemsCountExceeded={[Function]}
    />
    <ItemCard
      getSelectedItemCount={[Function]}
      isPrintLimitEnabled={true}
      key="187 - 3615"
      onRowSelect={[Function]}
      rowData={
        Object {
          "bankKey": 187,
          "brailleOnlyItem": false,
          "claimCode": "MATH4",
          "claimLabel": "Modeling/Data Analysis",
          "grade": 8,
          "gradeLabel": "Grade 6",
          "interactionTypeCode": "MS",
          "interactionTypeLabel": "Multi Select",
          "isPerformanceItem": false,
          "itemKey": 3615,
          "subjectCode": "MATH",
          "subjectLabel": "Math",
          "targetDescription": "target C description",
          "targetHash": 0,
          "targetId": "C",
          "targetShortName": "",
          "title": "Math Grade 6 Claim 4",
        }
      }
      showErrorModalOnPrintItemsCountExceeded={[Function]}
    />
    <ItemCard
      getSelectedItemCount={[Function]}
      isPrintLimitEnabled={true}
      key="187 - 2928"
      onRowSelect={[Function]}
      rowData={
        Object {
          "bankKey": 187,
          "brailleOnlyItem": false,
          "claimCode": "ELA4",
          "claimLabel": "Research/Inquiry",
          "grade": 2,
          "gradeLabel": "Grade 4",
          "interactionTypeCode": "MS",
          "interactionTypeLabel": "Multi Select",
          "isPerformanceItem": false,
          "itemKey": 2928,
          "subjectCode": "ELA",
          "subjectLabel": "ELA/literacy",
          "targetDescription": "target D description",
          "targetHash": 2832,
          "targetId": "D",
          "targetShortName": "Evaluate Information/ sources",
          "title": "ELA/ literacy Grade 4 Claim 4",
        }
      }
      showErrorModalOnPrintItemsCountExceeded={[Function]}
    />
  </div>
</div>
`;
